# floxy

./: README.md  docker-bake.hcl
.github/workflows/: build-and-push.yml  develop.workflow.yml  prerelease.workflow.yml  release.workflow.yml
docker/: Dockerfile
docker/fs/etc/nginx/conf.d/include/: proxy_headers.conf  ssl.conf
docker/scripts/: build.sh  validate.sh
entrypoint/: Cargo.toml  rust-toolchain.toml
entrypoint/src/: env.rs  inotify.rs  logging.rs  main.rs  nginx.rs  signal_handler.rs  ssl.rs
entrypoint/templates/: floxy.conf.jinja2
